@@ -152,6 +152,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #5122: Synchronize tk load failure check to prevent a potential
+  deadlock.
+
 - Issue #4890: Handle empty text search pattern in Tkinter.Text.search.
 
 - Issue #5170: Fixed Unicode output bug in logging and added test case.
